<resources>
    <string name="app_name">ImcCalculator</string>
    <string name="button_start">Iniciar</string>
    <string name="menu_title">IMC Calculator</string>
    <string name="text_Information">Coloque os seus dados na calculadora e calcule o seu IMC:</string>
    <string name="text_sex">Sexo:</string>
    <string name="radio_woman">Mulher</string>
    <string name="radio_men">Homem</string>
    <string name="text_age">Idade:</string>
    <string name="text_height">Altura:</string>
    <string name="text_weight">Peso:</string>
    <string name="button_calculate">Calcular</string>
    <string name="mesure_age">anos</string>
    <string name="hint_height">Ex: 165</string>
    <string name="hint_weight">Ex: 62.5</string>
    <string name="mesure_kg">kg</string>
    <string name="mesure_cm">cm</string>
    <string name="hint_age">Ex: 35</string>
</resources>